
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aba-payway"
version = "0.1.0"
description = "Python SDK for ABA PayWay payment gateway"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["certifi>=2024.0.0"]


[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["aba_sdk*"]