[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aba-payway"
version = "0.1.3"
description = "Python SDK for ABA PayWay payment gateway (QR, Check, Close Transaction)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Khon Chanphearaa", email = "khonchanphearaa@gmail.com" }
]
keywords = ["aba", "payway", "payment", "sdk", "khqr", "cambodia"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Sourcedevkh/py-payway"
Documentation = "https://github.com/Sourcedevkh/py-payway#readme"
Repository = "https://github.com/Sourcedevkh/py-payway"
Issues = "https://github.com/Sourcedevkh/py-payway/issues"
Changelog = "https://github.com/Sourcedevkh/py-payway/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff", "build", "twine"]

[tool.setuptools.packages.find]
where = ["."]
include = ["aba_sdk*"]
